# ClipToImg

./: README.md  pyproject.toml
cliptoimg/: __main__.py  cliptoimg.py
